--- a/about.html
+++ b/about.html
@@ -6,6 +6,99 @@
   <title>About — Bernadyland</title>
   <meta name="description" content="Tentang Bernadyland: perumahan modern dengan lokasi strategis, legalitas jelas, dan skema bayar fleksibel." />
 
+  <!-- =========================
+       SEO / AI OVERVIEW / PAGESPEED (OPTIMIZED)
+       Domain: https://bernadyland.vercel.app/
+       ========================= -->
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
+  <meta name="googlebot" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="theme-color" content="#1f4fff">
+  <meta name="color-scheme" content="light">
+
+  <link rel="canonical" href="https://bernadyland.vercel.app/about.html">
+
+  <!-- Preconnect / DNS Prefetch (Pagespeed) -->
+  <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+  <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
+  <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
+  <link rel="dns-prefetch" href="//images.unsplash.com">
+
+  <!-- Preload Hero Image (LCP) -->
+  <link rel="preload" as="image"
+        href="https://images.unsplash.com/photo-1568605114967-8130f3a36994?auto=format&fit=crop&w=2200&q=80"
+        fetchpriority="high">
+
+  <!-- FAVICON (maksimal) — pastikan file ada di root public -->
+  <link rel="icon" href="https://bernadyland.vercel.app/favicon.ico" sizes="any">
+  <link rel="icon" type="image/svg+xml" href="https://bernadyland.vercel.app/favicon.svg">
+  <link rel="apple-touch-icon" href="https://bernadyland.vercel.app/apple-touch-icon.png">
+  <link rel="manifest" href="https://bernadyland.vercel.app/site.webmanifest">
+  <link rel="mask-icon" href="https://bernadyland.vercel.app/safari-pinned-tab.svg" color="#1f4fff">
+  <meta name="msapplication-TileColor" content="#1f4fff">
+  <meta name="application-name" content="Bernadyland">
+  <meta name="apple-mobile-web-app-title" content="Bernadyland">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="id_ID" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Bernadyland" />
+  <meta property="og:title" content="About — Bernadyland" />
+  <meta property="og:description" content="Tentang Bernadyland: perumahan modern dengan lokasi strategis, legalitas jelas, dan skema bayar fleksibel." />
+  <meta property="og:url" content="https://bernadyland.vercel.app/about.html" />
+  <!-- Opsional: ganti ke OG image kamu sendiri -->
+  <meta property="og:image" content="https://images.unsplash.com/photo-1568605114967-8130f3a36994?auto=format&fit=crop&w=1600&q=80" />
+  <meta property="og:image:alt" content="About — Bernadyland" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="About — Bernadyland" />
+  <meta name="twitter:description" content="Tentang Bernadyland: perumahan modern dengan lokasi strategis, legalitas jelas, dan skema bayar fleksibel." />
+  <meta name="twitter:image" content="https://images.unsplash.com/photo-1568605114967-8130f3a36994?auto=format&fit=crop&w=1600&q=80" />
+
+  <!-- Structured Data (AI Overview / SEO) -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@graph":[
+      {
+        "@type":"Organization",
+        "@id":"https://bernadyland.vercel.app/#org",
+        "name":"Bernadyland",
+        "url":"https://bernadyland.vercel.app/",
+        "logo":"https://bernadyland.vercel.app/assets/img/logo-bernadyland.svg"
+      },
+      {
+        "@type":"WebSite",
+        "@id":"https://bernadyland.vercel.app/#website",
+        "url":"https://bernadyland.vercel.app/",
+        "name":"Bernadyland",
+        "publisher":{"@id":"https://bernadyland.vercel.app/#org"},
+        "inLanguage":"id-ID"
+      },
+      {
+        "@type":"AboutPage",
+        "@id":"https://bernadyland.vercel.app/about.html#webpage",
+        "url":"https://bernadyland.vercel.app/about.html",
+        "name":"About — Bernadyland",
+        "description":"Tentang Bernadyland: perumahan modern dengan lokasi strategis, legalitas jelas, dan skema bayar fleksibel.",
+        "isPartOf":{"@id":"https://bernadyland.vercel.app/#website"},
+        "about":{"@id":"https://bernadyland.vercel.app/#org"},
+        "inLanguage":"id-ID"
+      },
+      {
+        "@type":"BreadcrumbList",
+        "@id":"https://bernadyland.vercel.app/about.html#breadcrumbs",
+        "itemListElement":[
+          {"@type":"ListItem","position":1,"name":"Beranda","item":"https://bernadyland.vercel.app/"},
+          {"@type":"ListItem","position":2,"name":"About","item":"https://bernadyland.vercel.app/about.html"}
+        ]
+      }
+    ]
+  }
+  </script>
+
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
@@ -13,8 +106,13 @@
   <!-- CSS halaman ini -->
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&family=Noto+Serif:wght@600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&family=Noto+Serif:wght@600;700;800;900&display=swap" rel="stylesheet">
+
+  <!-- PAGESPEED tiny add-ons (hanya menambah) -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
 
 </head>
 
@@ -47,8 +145,8 @@
       <div class="collapse navbar-collapse" id="jmFloatNav">
         <ul class="navbar-nav jm-navCenter mx-lg-auto gap-lg-1">
           <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
-          <li class="nav-item"><a class="nav-link" href="cariperumahan.html">Cari Perumahan</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="cariperumahan.html">Cari Perumahan</a></li>
           <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
         </ul>
 
@@ -140,6 +238,7 @@
                 src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?auto=format&fit=crop&w=1400&q=80"
                 alt="Kawasan perumahan Bernadyland (placeholder)"
                 loading="lazy"
+                decoding="async"
               />
               <div class="photo-badge">
                 <div class="badge-title">Kawasan Tertata</div>
@@ -243,6 +342,62 @@
     <span class="d-none d-md-inline">Chat WhatsApp</span>
   </a>
 
+  <!-- FLOATING UP (Scroll to Top) -->
+  <button class="jm-up" id="jmUp" type="button" aria-label="Kembali ke atas">
+    <i class="bi bi-arrow-up"></i>
+  </button>
+
+  <style>
+    /* =========================
+       FLOATING UP (Scroll to top)
+       ========================= */
+    .jm-up{
+      position: fixed;
+      right: 18px;
+      bottom: 82px; /* sengaja di atas tombol WA */
+      z-index: 998;
+
+      width: 46px;
+      height: 46px;
+      border-radius: 999px;
+
+      border: 1px solid rgba(15,23,42,.12);
+      background: rgba(255,255,255,.92);
+      box-shadow: 0 14px 30px rgba(2,6,23,.14);
+
+      display: grid;
+      place-items: center;
+
+      color: rgba(11,18,32,.78);
+      opacity: 0;
+      transform: translateY(10px);
+      pointer-events: none;
+      transition: opacity .18s ease, transform .18s ease, filter .18s ease;
+    }
+    .jm-up:hover{
+      filter: brightness(.98);
+      color: var(--accent2);
+    }
+
+    .jm-up.is-show{
+      opacity: 1;
+      transform: translateY(0);
+      pointer-events: auto;
+    }
+
+    /* mobile: biar tidak numpuk + lebih kecil */
+    @media (max-width: 576px){
+      .jm-up{
+        right: 14px;
+        bottom: 76px;
+        width: 44px;
+        height: 44px;
+      }
+    }
+  </style>
+
+
+
   <!-- FOOTER (simple / normal) -->
 <footer class="jm-footerSimple">
   <div class="container">
@@ -264,12 +419,6 @@
           Temukan unit yang cocok lalu hubungi kami untuk pricelist terbaru.
         </p>
 
-        <div class="jm-footerBtns">
-          <a class="btn jm-footerGhost" target="_blank" rel="noopener"
-             href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20minta%20pricelist%20dan%20jadwal%20survey.">
-            <i class="bi bi-whatsapp me-2"></i> Hubungi Kami
-          </a>
-        </div>
       </div>
 
       <!-- Links -->
@@ -288,7 +437,7 @@
         <div class="jm-footerTitle">Kontak</div>
 
         <ul class="jm-footerInfo">
-          <li><i class="bi bi-geo-alt"></i><span>Lokasi proyek (sesuaikan)</span></li>
+          <li><i class="bi bi-geo-alt"></i><span>Bernadyland Slawu</span></li>
           <li><i class="bi bi-envelope"></i><span>hello@bernadyland.com</span></li>
         </ul>
 
@@ -297,7 +446,7 @@
           <a class="jm-soc" href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
           <a class="jm-soc" href="#" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
           <a class="jm-soc" target="_blank" rel="noopener"
-             href="https://wa.me/628XXXXXXXXXX?text=Halo%20Bernadyland,%20saya%20mau%20minta%20pricelist."
+             href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20minta%20pricelist."
              aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
         </div>
       </div>
@@ -309,6 +458,97 @@
   </div>
 </footer>
 
+  <style>
+    /* FLOATING UP (BACK TO TOP) */
+    .toTop-float{
+      position: fixed;
+      right: 18px;
+      bottom: 82px; /* di atas WA float */
+      z-index: 9999;
+      width: 46px;
+      height: 46px;
+      border-radius: 999px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(255,255,255,.92);
+      border: 1px solid rgba(11,18,32,.12);
+      box-shadow: 0 10px 24px rgba(11,18,32,.12);
+      opacity: 0;
+      visibility: hidden;
+      transform: translateY(8px);
+      transition: opacity .2s ease, transform .2s ease, visibility .2s ease;
+    }
+    .toTop-float.is-show{
+      opacity: 1;
+      visibility: visible;
+      transform: translateY(0);
+    }
+    .toTop-float i{
+      font-size: 18px;
+      color: rgba(11,18,32,.85);
+    }
+  </style>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    // Tahun otomatis
+    const y = document.getElementById("jmYear");
+    if(y) y.textContent = new Date().getFullYear();
+  </script>
+
+  <!-- Floating Up script (jmUp) -->
+  <script>
+    (function(){
+      const btn = document.getElementById('jmUp');
+      if(!btn) return;
+
+      const toggle = () => {
+        const y = window.scrollY || document.documentElement.scrollTop;
+        btn.classList.toggle('is-show', y > 600);
+      };
+
+      window.addEventListener('scroll', toggle, { passive: true });
+      toggle();
+
+      btn.addEventListener('click', () => {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+    })();
+  </script>
+
+  <script>
+    // Floating Up
+    (function(){
+      const btn = document.getElementById('toTopBtn');
+      if(!btn) return;
+
+      function toggle(){
+        if(window.scrollY > 450){
+          btn.classList.add('is-show');
+        } else {
+          btn.classList.remove('is-show');
+        }
+      }
+
+      window.addEventListener('scroll', toggle, { passive: true });
+      toggle();
+
+      btn.addEventListener('click', function(e){
+        e.preventDefault();
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+    })();
+  </script>
+
+  <!-- SEO/Pagespeed add-ons (tanpa ubah struktur, hanya menambah) -->
+  <script>
+    (function(){
+      // safety: set og:url & canonical tetap konsisten (sudah benar statis)
+      // noop
+    })();
+  </script>
+
 </body>
 </html>
