--- a/cariperumahan.html
+++ b/cariperumahan.html
@@ -6,6 +6,111 @@
   <title>Cari Perumahan — Bernadyland</title>
   <meta name="description" content="Cari unit Bernadyland: filter harga, tipe, kamar, fasilitas. Temukan hunian modern & investasi strategis." />
 
+  <!-- =========================
+       SEO / AI OVERVIEW / PAGESPEED (OPTIMIZED)
+       Domain: https://bernadyland.vercel.app/
+       ========================= -->
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
+  <meta name="googlebot" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
+  <meta name="theme-color" content="#1f4fff">
+  <meta name="color-scheme" content="light">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta name="format-detection" content="telephone=no">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://bernadyland.vercel.app/cariperumahan.html">
+
+  <!-- Hreflang (single language) -->
+  <link rel="alternate" href="https://bernadyland.vercel.app/cariperumahan.html" hreflang="id-ID">
+  <link rel="alternate" href="https://bernadyland.vercel.app/cariperumahan.html" hreflang="x-default">
+
+  <!-- Preconnect / DNS Prefetch (Pagespeed) -->
+  <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+  <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
+  <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
+  <link rel="dns-prefetch" href="//images.unsplash.com">
+
+  <!-- Preload LCP image (hero background) -->
+  <link rel="preload" as="image"
+        href="https://images.unsplash.com/photo-1568605114967-8130f3a36994?auto=format&fit=crop&w=2200&q=80"
+        fetchpriority="high">
+
+  <!-- FAVICON (maksimal) — pastikan file ada di root -->
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1f4fff">
+  <meta name="msapplication-TileColor" content="#1f4fff">
+  <meta name="application-name" content="Bernadyland">
+  <meta name="apple-mobile-web-app-title" content="Bernadyland">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="id_ID" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Bernadyland" />
+  <meta property="og:title" content="Cari Perumahan — Bernadyland" />
+  <meta property="og:description" content="Cari unit Bernadyland: filter harga, tipe, kamar, fasilitas. Temukan hunian modern & investasi strategis." />
+  <meta property="og:url" content="https://bernadyland.vercel.app/cariperumahan.html" />
+  <meta property="og:image" content="https://images.unsplash.com/photo-1568605114967-8130f3a36994?auto=format&fit=crop&w=1600&q=80" />
+  <meta property="og:image:alt" content="Cari Perumahan — Bernadyland" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Cari Perumahan — Bernadyland" />
+  <meta name="twitter:description" content="Cari unit Bernadyland: filter harga, tipe, kamar, fasilitas. Temukan hunian modern & investasi strategis." />
+  <meta name="twitter:image" content="https://images.unsplash.com/photo-1568605114967-8130f3a36994?auto=format&fit=crop&w=1600&q=80" />
+
+  <!-- Structured Data (AI Overview / SEO) -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@graph":[
+      {
+        "@type":"Organization",
+        "@id":"https://bernadyland.vercel.app/#org",
+        "name":"Bernadyland",
+        "url":"https://bernadyland.vercel.app/",
+        "logo":"https://bernadyland.vercel.app/assets/img/logo-bernadyland.svg"
+      },
+      {
+        "@type":"WebSite",
+        "@id":"https://bernadyland.vercel.app/#website",
+        "url":"https://bernadyland.vercel.app/",
+        "name":"Bernadyland",
+        "publisher":{"@id":"https://bernadyland.vercel.app/#org"},
+        "inLanguage":"id-ID"
+      },
+      {
+        "@type":"WebPage",
+        "@id":"https://bernadyland.vercel.app/cariperumahan.html#webpage",
+        "url":"https://bernadyland.vercel.app/cariperumahan.html",
+        "name":"Cari Perumahan — Bernadyland",
+        "description":"Cari unit Bernadyland: filter harga, tipe, kamar, fasilitas. Temukan hunian modern & investasi strategis.",
+        "isPartOf":{"@id":"https://bernadyland.vercel.app/#website"},
+        "about":{"@id":"https://bernadyland.vercel.app/#org"},
+        "inLanguage":"id-ID",
+        "primaryImageOfPage":{
+          "@type":"ImageObject",
+          "url":"https://images.unsplash.com/photo-1568605114967-8130f3a36994?auto=format&fit=crop&w=2200&q=80"
+        }
+      },
+      {
+        "@type":"BreadcrumbList",
+        "@id":"https://bernadyland.vercel.app/cariperumahan.html#breadcrumbs",
+        "itemListElement":[
+          {"@type":"ListItem","position":1,"name":"Beranda","item":"https://bernadyland.vercel.app/"},
+          {"@type":"ListItem","position":2,"name":"Cari Perumahan","item":"https://bernadyland.vercel.app/cariperumahan.html"}
+        ]
+      }
+    ]
+  }
+  </script>
+
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
@@ -47,8 +152,8 @@
       <div class="collapse navbar-collapse" id="jmFloatNav">
         <ul class="navbar-nav jm-navCenter mx-lg-auto gap-lg-1">
           <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
-          <li class="nav-item"><a class="nav-link" href="cariperumahan.html">Cari Perumahan</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="cariperumahan.html">Cari Perumahan</a></li>
           <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
         </ul>
 
@@ -444,6 +549,60 @@
     <span class="d-none d-md-inline">Chat WhatsApp</span>
   </a>
 
+  <!-- FLOATING UP (Scroll to Top) -->
+  <button class="jm-up" id="jmUp" type="button" aria-label="Kembali ke atas">
+    <i class="bi bi-arrow-up"></i>
+  </button>
+
+  <style>
+    /* =========================
+       FLOATING UP (Scroll to top)
+       ========================= */
+    .jm-up{
+      position: fixed;
+      right: 18px;
+      bottom: 82px; /* sengaja di atas tombol WA */
+      z-index: 998;
+
+      width: 46px;
+      height: 46px;
+      border-radius: 999px;
+
+      border: 1px solid rgba(15,23,42,.12);
+      background: rgba(255,255,255,.92);
+      box-shadow: 0 14px 30px rgba(2,6,23,.14);
+
+      display: grid;
+      place-items: center;
+
+      color: rgba(11,18,32,.78);
+      opacity: 0;
+      transform: translateY(10px);
+      pointer-events: none;
+      transition: opacity .18s ease, transform .18s ease, filter .18s ease;
+    }
+    .jm-up:hover{
+      filter: brightness(.98);
+      color: var(--accent2);
+    }
+
+    .jm-up.is-show{
+      opacity: 1;
+      transform: translateY(0);
+      pointer-events: auto;
+    }
+
+    /* mobile: biar tidak numpuk + lebih kecil */
+    @media (max-width: 576px){
+      .jm-up{
+        right: 14px;
+        bottom: 76px;
+        width: 44px;
+        height: 44px;
+      }
+    }
+  </style>
+
   <!-- FOOTER (simple / normal) -->
 <footer class="jm-footerSimple">
   <div class="container">
@@ -465,12 +624,6 @@
           Temukan unit yang cocok lalu hubungi kami untuk pricelist terbaru.
         </p>
 
-        <div class="jm-footerBtns">
-          <a class="btn jm-footerGhost" target="_blank" rel="noopener"
-             href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20minta%20pricelist%20dan%20jadwal%20survey.">
-            <i class="bi bi-whatsapp me-2"></i> Hubungi Kami
-          </a>
-        </div>
       </div>
 
       <!-- Links -->
@@ -489,7 +642,7 @@
         <div class="jm-footerTitle">Kontak</div>
 
         <ul class="jm-footerInfo">
-          <li><i class="bi bi-geo-alt"></i><span>Lokasi proyek (sesuaikan)</span></li>
+          <li><i class="bi bi-geo-alt"></i><span>Bernadyland Slawu</span></li>
           <li><i class="bi bi-envelope"></i><span>hello@bernadyland.com</span></li>
         </ul>
 
@@ -498,7 +651,7 @@
           <a class="jm-soc" href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
           <a class="jm-soc" href="#" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
           <a class="jm-soc" target="_blank" rel="noopener"
-             href="https://wa.me/628XXXXXXXXXX?text=Halo%20Bernadyland,%20saya%20mau%20minta%20pricelist."
+             href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20minta%20pricelist."
              aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
         </div>
       </div>
@@ -512,6 +665,26 @@
 </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Floating Up script -->
+  <script>
+    (function(){
+      const btn = document.getElementById('jmUp');
+      if(!btn) return;
+
+      const toggle = () => {
+        const y = window.scrollY || document.documentElement.scrollTop;
+        btn.classList.toggle('is-show', y > 600);
+      };
+
+      window.addEventListener('scroll', toggle, { passive: true });
+      toggle();
+
+      btn.addEventListener('click', () => {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+    })();
+  </script>
 
   <!-- =========================
        SCRIPT FINAL (PASTE)
